# First-CPP-APP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  STYLE_GUIDE.md  annotated.html  annotated_dup.js  calculator-logo.txt  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  fix_doctype.sh  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
.github/workflows/: ci.yml
d0/d33/: calculator_8cpp__incl.map  calculator_8cpp__incl.md5
d2/d45/: calculator_8cpp.html
d4/dc3/: calculator_8h__incl.map  calculator_8h__incl.md5
d8/dbe/: classCalculator.html  classCalculator.js  classCalculator_a1264d26247e77ad966aea7371c45c314_cgraph.map  classCalculator_a1264d26247e77ad966aea7371c45c314_cgraph.md5  classCalculator_a1264d26247e77ad966aea7371c45c314_icgraph.map  (+79 more)
da/d8e/: classCalculator__coll__graph.map  (+1 more)
docs/: header.html
search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  classes_0.html  classes_0.js  files_0.html  files_0.js  files_1.html  functions_0.html  functions_0.js  functions_1.html  functions_1.js  functions_2.html  functions_2.js  functions_3.html  (+31 more)
src/: calculator.cpp  calculator.h  main.cpp
tests/: calculator_test.cpp
(+16 files in other folders)
